--- a/.env
+++ b/.env
@@ -29,5 +29,8 @@ APP_SECRET=3fe155d69f78878f3fbba2d05b6fbaf2
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://user:baseDADES@0@127.0.0.1:3306/projectefinal?serverVersion=5.7
+
+# CONNEXIÓ EN PRODUCCIÓ (PEL LABS)
+# DATABASE_URL=mysql://XXXXXXXX:XXXXXXXX@localhost:3306/XXXXXXX?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
