--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 index:
     path: /
     controller: App\Controller\MainController::index
+homepage:
+    path: /index
+    controller: App\Controller\MainController::index
