Actualitzat fitxer .env amb credencials per labs.iam.cat

--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ APP_SECRET=3fe155d69f78878f3fbba2d05b6fbaf2
 DATABASE_URL=mysql://user:baseDADES@0@127.0.0.1:3306/projectefinal?serverVersion=5.7
 
 # CONNEXIÓ EN PRODUCCIÓ (PEL LABS)
-# DATABASE_URL=mysql://XXXXXXXX:XXXXXXXX@localhost:3306/XXXXXXX?serverVersion=5.7
+# DATABASE_URL=mysql://a18ismaitoug_us:baseDADES0@localhost:3306/a18ismaitoug_prj?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
