Afegides plantilles buides, enllaços entre pagines fets, enllaç landing page-panell de control fet

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -25,6 +25,9 @@ notifications:
 mail:
     path: /mail
     controller: App\Controller\DashboardController::mail
+personalReport:
+    path: /personalReport
+    controller: App\Controller\DashboardController::personalReport
 settings:
     path: /settings
     controller: App\Controller\DashboardController::settings
